Fixed bugs on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,10 @@ body {
   padding: 8px 0;
 }
 
+.boxV {
+  pointer-events: none;
+}
+
 a {
   text-decoration: none;
   font-size: 1.1em;
